[tool.poetry]
name = "choise_auto"
version = "0.1.0"
description = ""
authors = ["Vitalii Kuzminov <vitalii.k@pixellu.com>"]

[tool.poetry.dependencies]
ipdb = "^0.13.9"
parsel = "^1.6.0"
python = "^3.8"
pytest = "^7.1.2"
selenium = "^4.4.3"
webdriver-manager = "^3.8.3"
redis = "^4.3.4"
pyTelegramBotAPI = "^4.7.0"
pytest-xdist = "^2.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
